# EBA_minigames

./: README.md
miniwouf/: CMakeLists.txt  GameOfLife.h  coinToss.cpp  coinToss.h  dice.cpp  dice.h  guessTheNumber.cpp  guessTheNumber.h  help.h  main.cpp  moneyCount.h
v1/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  coinToss.h  dice.cpp  dice.h  guessTheNumber.cpp  help.cpp  help.h  main.cpp  moneyCount.cpp  moneyCount.h
v2/: CMakeLists.txt  main.cpp
v2 interface/: coinToss.cpp  dice.cpp  guessTheNumber.cpp  guessTheNumber.h  main.cpp  moneyCount.cpp
